--- a/b_example/a02_beginner/css/src/font_01.css
+++ b/b_example/a02_beginner/css/src/font_01.css
@@ -15,3 +15,50 @@ ol,li{list-style:decimal; padding-left: 1.3rem;}
 
 .bold{font-weight:bold;}
 .weight_normal{font-weight:normal;}
+
+.italic{font-style:italic;}
+.italic_normal{font-style:normal;}
+
+.underline{text-decoration:underline;}
+.under_normal{text-decoration: none;}
+
+.delete{text-decoration:line-through;
+        text-decoration-color:#faa;
+        text-decoration-style:dotted;}
+.del_normal{text-decoration:none;}
+
+/*  ----------------- */
+.mini_web{border: 1px solid #999; padding: 1rem;}
+
+.mini_web>h1{font-size:12pt; font-weight: normal;}
+.mini_web>h2{font-size:100%; font-weight: normal;
+             background-color:transparent;
+             margin-bottom: 0;}
+.mini_web>h3{font-size:1em; font-weight: normal; }
+.mini_web>h4{font-size:1rem; font-weight: normal;background-color: transparent;}
+
+/* ======================================= */
+h4{padding: 0.3em; background-color: #acf;}
+.size_box{width:800px; height:auto; border:1px solid  #333; background-color: #fca; padding: 1rem;}
+.size_box span{display: block; border: 1px solid  #333;
+  padding: 0.5rem;}
+
+.pt_check{font-size: 36pt;}
+.pt_01{font-size:18pt;}
+.pt_02{font-size:9pt;}
+.pt_03{font-size:18pt;}
+.pt_04{font-size:9pt;}
+
+/* %단위는 최초의 설정에서만 12pt의 값의 기준으로 설정되고, 이후는 자신의 부모를 기준 크기로 설정 */
+
+.per_check{font-size:300%;}
+.per_01{font-size:50%;}
+.per_02{font-size:50%;}
+.per_03{font-size:200%;}
+.per_04{font-size:50%;}
+
+/* em단위는  */
+
+
+
+/* ======================================= */
