--- a/b_example/b_basic/css/src/rwd_03_homework.css
+++ b/b_example/b_basic/css/src/rwd_03_homework.css
@@ -1,8 +1,9 @@
 @charset "UTF-8";
 
 /* rwd_03_homework.css */
-#wrap{width:60rem; height:250rem; background-color: #fa0;}
-
+#wrap{width:100%; height:250rem; background-color: #fa0;}
+h1{float:left; height: 100px; background-color: #0ff;}
+.btn{float:left; height: 100px; background-color: #777;}
 
 /* commonArea ========================================= */
 
@@ -10,17 +11,24 @@
 
 /* mobole 480 ========================================= */
 @media screen and (max-width:480px) {
+  #wrap {background-color: #afa;}
+  h1{width:30%; max-width: 200px; min-width:100px;}
+  .btn{width: 30%; max-width: 200px; min-width:100px;}
 
 }/* // end mobole 480 */
 
 /* tablet 768 =========================================== */
 @media screen and (min-width:481px) and (max-width:768px) {
+  #wrap{background-color: #acf;}
 
 }/* // end tablet 768 */
 
 /* laptop 1366 ========================================= */
 @media screen and (min-width:769px) and (max-width:1366px) {
+  #wrap{background-color: #f50;}
 
 }/* // end laptop 1366 */
+
+
 
 /* =========================================== */
