--- a/b_example/b_basic/css/src/layout/rwd_03_tablet.css
+++ b/b_example/b_basic/css/src/layout/rwd_03_tablet.css
@@ -5,6 +5,12 @@
 @media screen and (min-width:481px) and (max-width:768px) {
   /* device 기준크기 : 768px */
   #wrap {background-color: #acf;}
+  h1{width:22.65625vw; /* 174/768*100 */ min-width:8.125rem; max-width:10.875rem;
+     height: 5.46875vw; /*42/768*100 */ min-height:1.875rem; max-height:2.625rem;}
+  #navBox{width:12.2395833vw; /* 94/768*100 */ min-width:5.625rem; max-width:5.875rem; 
+        height: 4.9479167vw; /* 38/768*100 */ min-height:2.375rem; max-height:2.375rem; }
+
+
   #addBanner {height:58.59375vw; /* 450/768*100 */ min-height:25rem; max-height:28.125rem;}
   #infoBox{height:27.34375vw; /* 210/768*100 */ min-height:9.375rem; max-height:13.125rem;}
   #contentBox{height:70.3125; /* 540/768*100 */ min-height:28.125rem; max-height:33.75rem;}
