--- a/b_example/b_basic/css/base/common.css
+++ b/b_example/b_basic/css/base/common.css
@@ -1,9 +1,15 @@
 /* common.css */
 @charset "UTF-8";
 
-.hidden{display: block; width: 0; height: 0; overflow: hidden; position:absolute; z-index: -100;}
+.hidden, 
+.hidden_wrap a>span,
+.hidden_wrap button>span{
+  display: block; width: 0; height: 0; overflow: hidden; 
+  position:relative; z-index: -100;}
+
 .clearfix:after,
 .clearfix::after{content:" "; display: block;
   width:0; height:0; clear: both;}
 
 #wrap{margin:0 auto;}
+
