--- a/b_example/b_basic/css/src/layout/rwd_03_mobile.css
+++ b/b_example/b_basic/css/src/layout/rwd_03_mobile.css
@@ -4,11 +4,13 @@
 @media screen and (max-width:480px) {
   /* device 기준크기 : 480px */
   #wrap {background-color: #afa;}
-  #headBox {padding:0.3125rem 0.75rem; 
-    height:12.5vw;/* 60/480*100 */ min-height:2.5rem;} 
+  #headBox {height:12.5vw;/* 60/480*100 */ min-height:2.5rem;} 
   h1{width: 26.25vw;/* 126/... */ min-width:6.25rem;}
   #navBox{width:18.75vw;/* 90/... */ min-width:3.75rem; max-width:5.625rem; 
           height:7.901667vw;/* 38/... */ min-height:1.5625rem; max-height:2.375rem;}
+  .sign_up{width:7.5vw; /* 36/... */min-width:1.5rem; max-width:2.25rem;}
+  .menu{width:9.375vw; /* 45/... */ min-width:1.875rem; max-width:2.8125rem;}
+
 
   #addBanner{margin-top:12.5vw; /* 60/480*100 */ 
     height:150vw; /* 720/480*100 */ min-height:30rem;}
