--- a/b_example/b_basic/css/src/layout/rwd_03_tablet.css
+++ b/b_example/b_basic/css/src/layout/rwd_03_tablet.css
@@ -10,6 +10,9 @@
   #navBox{width:12.2395833vw; /* 94/768*100 */ min-width:5.625rem; max-width:5.875rem; 
         height: 4.9479167vw; /* 38/768*100 */ min-height:2.375rem; max-height:2.375rem; }
 
+  .sign_up {width:45%;}
+  .menu {width:45%;}
+
 
   #addBanner {height:58.59375vw; /* 450/768*100 */ min-height:25rem; max-height:28.125rem;}
   #infoBox{height:27.34375vw; /* 210/768*100 */ min-height:9.375rem; max-height:13.125rem;}
