--- a/b_example/b_basic/css/src/layout/rwd_03_common.css
+++ b/b_example/b_basic/css/src/layout/rwd_03_common.css
@@ -17,7 +17,11 @@ h1{float:left; width:6.25rem; height:1.875rem; background-color:#afa; font-size:
 .menu{width: 30px; height: 100%; float: right;}
 .menu>button{width:100%; height:100%; }
 .gnb{display: none;}
-
+/*임시 테스트:; 시작*/
+.menu>button:focus + .gnb,
+.menu>button:hover + .gnb{display: block; width: 50vw; height: 50vh; background-color: #afc;}
+.gnb a{display: block; width: 10vw; height: 2rem; background-color: #fff; border: 1px solid  #333;  }
+/*임시 테스트:; 끝*/
 
 /* #addBanner ---------------- */
 #addBanner{margin-top:3.75rem; width: 100%; background-color: #ba7;}
