--- a/b_example/b_basic/css/src/layout/rwd_03_mobile.css
+++ b/b_example/b_basic/css/src/layout/rwd_03_mobile.css
@@ -12,6 +12,22 @@
   .menu{width:9.375vw; /* 45/... */ min-width:1.875rem; max-width:2.8125rem;}
 
 
+.gnb{display: none;}
+
+/*임시 테스트: 시작*/
+.menu{position: relative;}
+.gnb{position: absolute; top: 100%; right: 0; display: none;}
+.gnb>ul{width: 100%; height: auto;}
+.gnb>ul>li{width: 100%; height: auto;}
+.gnb>ul>li>a{display: block; width: 100%; height: 2rem; margin-bottom: 1rem;}
+
+
+.menu>button:focus + .gnb,
+.menu>button:hover + .gnb{display: block; width: 50vw; height: 50vh; background-color: #afc;}
+.gnb a{display: block; width: 10vw; height: 2rem; background-color: #fff; border: 1px solid  #333;  }
+/*임시 테스트: 끝*/
+
+
   #addBanner{margin-top:12.5vw; /* 60/480*100 */ 
     height:150vw; /* 720/480*100 */ min-height:30rem;}
   #infoBox{height:150vw; /* 720/480*100 */ min-height:30rem;}
