--- a/b_example/b_basic/css/src/rwd_03_homework.css
+++ b/b_example/b_basic/css/src/rwd_03_homework.css
@@ -5,5 +5,5 @@
 @import url("./layout/rwd_03_mobile.css");
 @import url("./layout/rwd_03_tablet.css");
 @import url("./layout/rwd_03_labtop.css");
-@import url("./layout/rwd_03_pdfull.css");
+@import url("./layout/rwd_03_pcfull.css");
 
