--- a/b_example/b_basic/css/src/layout/rwd_03_mobile.css
+++ b/b_example/b_basic/css/src/layout/rwd_03_mobile.css
@@ -31,7 +31,13 @@
   #addBanner{margin-top:12.5vw; /* 60/480*100 */ 
     height:150vw; /* 720/480*100 */ min-height:30rem;}
   #infoBox{height:150vw; /* 720/480*100 */ min-height:30rem;}
-  #contentBox{height:150vw; /* 720/480*100 */ min-height:30rem;}
+  #contentBox{height:auto; /* 720/480*100 */ min-height:auto;}
+  .con_in{float:left; width:100%; height:auto; min-height:10rem;}
+  .cont_01{background-color: #af3;}
+  .cont_02{background-color: #ba4;}
+  .cont_03{background-color: #c65;}
+
+
   #footBox {height:12.5vw;/* 60/480*100 */ min-height:2.5rem;} 
 
 }/* // end mobole 480 */
