--- a/b_example/b_basic/css/src/layout/rwd_03_tablet.css
+++ b/b_example/b_basic/css/src/layout/rwd_03_tablet.css
@@ -16,6 +16,9 @@
 
   #addBanner {height:58.59375vw; /* 450/768*100 */ min-height:25rem; max-height:28.125rem;}
   #infoBox{height:27.34375vw; /* 210/768*100 */ min-height:9.375rem; max-height:13.125rem;}
-  #contentBox{height:70.3125; /* 540/768*100 */ min-height:28.125rem; max-height:33.75rem;}
-
+  #contentBox{height:auto; /* 540/768*100 */ min-height:28.125rem; max-height:auto;}
+  .con_in{float:left; width:50%; height:auto; min-height:30rem;}
+  .cont_01{background-color: #af3;}
+  .cont_02{background-color: #ba4;}
+  .cont_03{background-color: #c65; width: 100%; height: 10rem; min-height: auto;}
 }/* // end tablet 768 */
