--- a/b_example/b_basic/css/src/slide_banner_01.css
+++ b/b_example/b_basic/css/src/slide_banner_01.css
@@ -7,4 +7,22 @@
 h1{padding: 1rem; border-bottom:1px solid #333; background-color: #7af; margin-bottom: 2rem;
   box-shadow:0 0.3rem 0.3rem rgba(50,50,50,0.5);}
 
-#viewBox{margin: auto; width: 60rem; height: 450px; border:2px solid #777; background-color: #fff;}
+#viewBox{position: relative; margin: auto; width: 60rem; height: 450px; border:2px solid #777; background-color: #fff;}
+
+  .view_indicator{position: absolute; bottom: 1rem; left: 50%; margin-left: -6.25rem; 
+    width: 12.5rem; height: 1.875rem; background-color: #acc;}
+  
+
+  .hidden_wrap button>span{display: block; width: 0; height: 0; overflow: hidden;}
+  
+  .view_btn{position: absolute; top: 50%; margin-top: -2.5rem; width: 100%; height:0; background-color: #f6f;}
+  .view_btn>button{width: 2rem; height: 5rem;}
+    .next_btn{float: right;}
+    .prev_btn{float: left;}
+
+  .view_banner{width: 100%; height: 100%; background-color: #fa7; overflow: hidden;}
+  .view_banner_outer{width:300%; height:100%; background-color: #da8;}
+  .view_banner_outer>div{float: left; width:33.333333%; height: 100%;}
+    .view_banner_01{background-color:#a4f;}
+    .view_banner_02{background-color:#5af;}
+    .view_banner_03{background-color:#5fa;}
