--- a/b_example/b_basic/css/base/common.css
+++ b/b_example/b_basic/css/base/common.css
@@ -4,8 +4,7 @@
 .hidden, 
 .hidden_wrap a>span,
 .hidden_wrap button>span{
-  display: block; width: 0; height: 0; overflow: hidden; 
-  position:relative; z-index: -100;}
+  display: block; width: 0; height: 0; overflow: hidden; }
 
 .clearfix:after,
 .clearfix::after{content:" "; display: block;
