--- a/b_example/b_basic/css/src/slide_banner_01.css
+++ b/b_example/b_basic/css/src/slide_banner_01.css
@@ -11,7 +11,30 @@ h1{padding: 1rem; border-bottom:1px solid #333; background-color: #7af; margin-b
 
   .view_indicator{position: absolute; bottom: 1rem; left: 50%; margin-left: -6.25rem; 
       width: 12.5rem; height: 1.875rem; background-color: #acc;}
-  
+  .view_indicator>ul{width: 100%; height: 100%;}
+  .view_indicator>ul>li{float: left; width:1.875rem; height:100%; margin-right: 1.5rem;}
+  .view_indicator>ul>li:last-child{margin-right: 0;}
+  .view_indicator>ul>li>a{display: block; width: 100%; height: 100%; border-radius:50%; background-color:rgba(255,255,255,0.7); position: relative;}
+
+/* 마우스 올리거나, focus되었을 경우 해당 인디케이터 색상변하기 */
+  .view_indicator>ul>li>a:focus,
+  .view_indicator>ul>li>a:hover{background-color: #f06; outline: 0;}
+
+/*마우스 올리거나, focus되었을 경우 말풍선 나오기 */
+  .view_indicator>ul>li>a:focus > span,
+  .view_indicator>ul>li>a:hover > span { overflow:visible;
+    position: absolute; bottom: 2.5rem; left: 50%; margin-left: -75px;
+    width: auto; height: auto; background-color: #f06; border-radius: 0.2rem;
+    color:#fff; text-align: center; white-space:nowrap; padding:0.4rem 1rem; z-index: 0; }
+
+/* 마우스 올리거나, focus되었을 경우 말풍선에 삼각형(마름모) 모양 보이기 */
+  .view_indicator>ul>li>a:focus>span:before,
+  .view_indicator>ul>li>a:hover>span:before{content:" "; display: block; 
+    width: 1rem; height: 1rem; transform:rotate(45deg); background-color:inherit; 
+    position: absolute; bottom: -0.5rem; left: 50%; margin-left: -0.5rem;}
+
+
+
 /* -------------------------------------------------------------- */
   .hidden_wrap a>span,
   .hidden_wrap button>span{display: block; width: 0; height: 0; overflow: hidden;}
