--- a/b_example/c_normal/css/base/common.css
+++ b/b_example/c_normal/css/base/common.css
@@ -1,5 +1,18 @@
 @charset "UTF-8";
 
 /* common.css */
-.hidden{display: block; width: 0; height: 0; overflow: hidden; position:absolute; z-index: -100;}
+.hidden_wrap a, .hidden_wrap button{display: block; width: 100%; height: 100%;}
+
+.hidden,
+.hidden_wrap a>span,
+.hidden_wrap button>span{
+  display: block; width: 0; height: 0; overflow: hidden; position:absolute; z-index: -100;}
+
 .clearfix:after, .clearfix::after {content:" "; display: block; width: 0; height: 0; clear: both;}
+
+.container {margin: auto; padding:0 0.625rem; box-sizing:border-box; 
+            width: auto; max-width: 60rem; height: auto;}
+
+.container_wrap {margin: auto; padding:0 0.625rem; box-sizing: border-box; 
+            width: auto; max-width: auto; height: auto;}
+
