--- a/b_example/c_normal/css/base/reset.css
+++ b/b_example/c_normal/css/base/reset.css
@@ -1,23 +1,29 @@
 @charset "UTF-8";
 /* reset.css */
 
-html, body{width: 100%; height: 100%; margin: 0; padding: 0; background-color: #fff;
+html, body{margin: 0; padding: 0; width: 100%; height: 100%;  background-color: #fff;
   font-family:NanumGothic, "myriad pro", arial, dotum, sans-serif;
   font-weight:normal; font-style:normal; line-height:1.2;
-  color:#333; /*font:bold italic 1rem/1.2 "myriad pro";*/ }
-h1,h2,h3,h4,h5,h6,p,pre,div,ul,ol,li,dl,dt,dd,img, video, audio{
+  color:#333;}
+h1,h2,h3,h4,h5,h6,p,pre,div,ul,ol,li,dl,dt,dd,img, video, audio, q, button, blockquote{
   margin: 0; padding: 0; border: 0; outline: 0;}
 ul,ol,li{list-style:none;}
+
 a{text-decoration: none; color:#f06;}
-a:hover,a:focus{color:#fa0;}
-a:focus{outline:3px solid #fa0; outline-offset:3px; position: relative; z-index: 500;}
+button{border:0; border-radius:0; cursor:pointer;  background-color:transparent;}
+
+a:hover,a:focus, button:hover, button:focus{color:#fa0;}
+a:focus, button:focus{
+  outline:0.2rem solid #fa0; outline-offset:0.2rem; position: relative; z-index: 500;}
 
 br{width: 0; height: 0; display: block; font-size: 0;}
-hr{border-bottom:1px solid #333; margin: 0; padding: 0; width: 100%;}
-abbr{text-decoration:none;}
+hr{border-bottom:0.0625rem solid #333; margin: 0; padding: 0; width: 100%;}
+
+abbr{text-decoration:none; text-transform:uppercase;}
 address{font-style:normal;}
 
-header,nav,section,article,aside,footer,main,figure,figcaption,video, audio{display: block;}
+header,nav,section,article,aside,footer,main,figure,figcaption,video, audio{
+  display: block; margin: 0; padding: 0; border: 0; outline: 0;}
 
 
 
