--- a/b_example/c_normal/css/src/jquery/slide_banner_02.css
+++ b/b_example/c_normal/css/src/jquery/slide_banner_02.css
@@ -37,11 +37,11 @@ h1>a{font-size:inherit; color:inherit;}
                     transform:scale(1.5);}
 
 /* .view_banner */
-.view_banner{width: 100%; height: 100%;}
+.view_banner{width: 100%; height: 100%; overflow: hidden;}
 .view_banner_outer{width: 500%; height: 100%; background-color: #afaf77;}
 .view_banner_outer>div{position: relative; z-index: 50; width: 20%; height: 100%; float: left;
     box-sizing: border-box; padding: 2rem;
-    background-position: top; background-repeat: no-repeat; background-size:cover;}
+    background-position:center top; background-repeat: no-repeat; background-size:cover;}
 .view_banner_outer>div:before{content:" "; display: block; width: 100%; height: 100%; 
     background-color:rgba(0,0,0,0.7); position: absolute; z-index: -1; top: 0;left: 0;}
 .banner_01{background-color: #f1a; background-image: url("../../../img/slide_banner/bg_01.jpg");}
