gcass basic layout

--- a/b_example/c_normal/css/src/gcass/layout.css
+++ b/b_example/c_normal/css/src/gcass/layout.css
@@ -78,11 +78,18 @@
 
 #wrap{margin: auto; width:61.25rem; height:53.125rem;}
 
-#homeBox{width: 100%; height:1.875rem; background-color:var(--subColor2);}
+#homeBox{position: relative; z-index: 100; width: 100%; height:1.875rem; background-color:#888888;}
 
+#homeBox:before,
+#homeBox::before, 
+#footBox:before,
+#footBox::before{content:" "; display: block;
+					position: absolute; z-index: -1; top: 0; left: 50%; margin-left:-50vw;
+					width: 100vw; height: 100%; background-color:inherit; }
 
-.box_wrap{width: 100%; height: auto; min-height:50rem; background-color:var(--background1);}
-h1{font-size: 3rem;}
+.box_wrap{width: 100%; height: auto; min-height:40rem; background-color:#adadad;}
+#headBox{float:left; width: 250px; height:auto; min-height:44.375rem; background-color:#777777;}
+#viewBox{float:left; width: 730px; height:auto; min-height:44.375rem; background-color:#acf;}
 
-#footBox{border-top:0.0625rem solid #171717; width: 100%; height:6.875rem; 
-				background-color:var(--textColor2);}
+#footBox{position: relative; z-index: 100; border-top:0.0625rem solid #171717; 
+	  width: 100%; height:6.875rem; background-color:#ffff55;}
