--- a/b_example/c_normal/css/src/gcass/layout.css
+++ b/b_example/c_normal/css/src/gcass/layout.css
@@ -62,34 +62,36 @@
 
 */
 
-:root{
- font-size:16px;
-
- --mainColor   : #fff30d;
- --subColor1   : #777777;
- --subColor2   : #888888;
- --subColor3   : #575757;
- --white       : #ffffff;
- --textColor1  : #171717;
- --textColor2  : var(--white);
- --background1 : #adadad;
-}
-
-
+body{overflow-x: hidden;}
 #wrap{margin: auto; width:61.25rem; height:53.125rem;}
 
 #homeBox{position: relative; z-index: 100; width: 100%; height:1.875rem; background-color:#888888;}
 
-#homeBox:before,
-#homeBox::before, 
-#footBox:before,
-#footBox::before{content:" "; display: block;
+#homeBox:before, #homeBox::before, 
+#footBox:before, #footBox::before{content:" "; display: block;
 					position: absolute; z-index: -1; top: 0; left: 50%; margin-left:-50vw;
 					width: 100vw; height: 100%; background-color:inherit; }
 
-.box_wrap{width: 100%; height: auto; min-height:40rem; background-color:#adadad;}
-#headBox{float:left; width: 250px; height:auto; min-height:44.375rem; background-color:#777777;}
-#viewBox{float:left; width: 730px; height:auto; min-height:44.375rem; background-color:#acf;}
+.box_wrap{width:100%; height:auto; min-height:40rem;}
+#headBox{float:left; position: relative; z-index: 100; width:15.625rem; height:auto; min-height:44.375rem; background-color:#777777;}
 
-#footBox{position: relative; z-index: 100; border-top:0.0625rem solid #171717; 
+#headBox:before, #headBox::before{content:" "; display: block; 
+        position: absolute; z-index:-1; top: 0; left: 50%; margin-left:-50vw;
+				width: 50vw; height: 100%; background-color:inherit;}
+
+
+#viewBox{float:left; position: relative; z-index: 100; width:45.625rem; height:auto; min-height:44.375rem;  background-color:#adadad;}
+
+#viewBox:before, #viewBox::before{content:" "; display: block; 
+        position: absolute; z-index:-1; top: 0; right: 50%; margin-right:-50vw;
+				width: 50vw; height: 100%; background-color:inherit;}
+
+
+#footBox{position: relative; z-index: 100; 
 	  width: 100%; height:6.875rem; background-color:#ffff55;}
+
+#footBox:after,
+#footBox::after{content:" "; display: block; max-width: 100vw; height: 0;
+				position: absolute; z-index: 500; left: 50%; top: 0; margin-left: -50vw;
+				border-top:0.0625rem solid #171717;}
+
