--- a/b_example/c_normal/css/src/gcass/layout.css
+++ b/b_example/c_normal/css/src/gcass/layout.css
@@ -64,13 +64,32 @@
 
 body{overflow-x: hidden;}
 #wrap{margin: auto; width:61.25rem; height:53.125rem;}
-
+/* #home =================================== */
 #homeBox{position: relative; z-index: 100; width: 100%; height:1.875rem; background-color:#888888;}
+#homeBox ul{float: right; width: 28rem; height: 100%;}
+#homeBox ul>li{float:left; width: 95px; height: 100%;}
+#homeBox ul>li:nth-child(2) {background-color:#555555;}
+#homeBox ul>li:last-child {position:relative; z-index:100; width:15.3125rem;background-color:#fff30d;}
 
+.hidden_wrap a{display: block; width: 100%; height: 100%; background-color:inherit;}
+
+#homeBox ul>li:last-child a:after{content:" "; display: block;
+	position: absolute; z-index: -1; top: 0; left: 0;
+  width: 50vw; height: 100%; background-color:inherit;}
+
+#homeBox ul>li>a:hover{background-color: #acc;}
+#homeBox ul>li>a:focus{background-color: #afc;}
+
+
+
+
+
+/* ======================================== */
 #homeBox:before, #homeBox::before, 
 #footBox:before, #footBox::before{content:" "; display: block;
 					position: absolute; z-index: -1; top: 0; left: 50%; margin-left:-50vw;
 					width: 100vw; height: 100%; background-color:inherit; }
+/* ======================================== */
 
 .box_wrap{width:100%; height:auto; min-height:40rem;}
 #headBox{float:left; position: relative; z-index: 100; width:15.625rem; height:auto; min-height:44.375rem; background-color:#777777;}
@@ -91,7 +110,7 @@ body{overflow-x: hidden;}
 	  width: 100%; height:6.875rem; background-color:#ffff55;}
 
 #footBox:after,
-#footBox::after{content:" "; display: block; max-width: 100vw; height: 0;
+#footBox::after{content:" "; display: block; width: 100vw; height: 0;
 				position: absolute; z-index: 500; left: 50%; top: 0; margin-left: -50vw;
 				border-top:0.0625rem solid #171717;}
 
