--- a/b_example/c_normal/css/src/gcass/layout.css
+++ b/b_example/c_normal/css/src/gcass/layout.css
@@ -71,7 +71,10 @@ body{overflow-x: hidden;}
 #homeBox ul>li:nth-child(2) {background-color:#555555;}
 #homeBox ul>li:last-child {position:relative; z-index:100; width:15.3125rem;background-color:#fff30d;}
 
-.hidden_wrap a{display: block; width: 100%; height: 100%; background-color:inherit;}
+#homeBox a{display: block; width: 100%; height: 100%; background-color:inherit; text-align: center;
+ line-height:1.875rem; color:#fff;}
+#homeBox li:last-child>a{text-align: left; text-indent:1rem; 
+	color:#171717;}
 
 #homeBox ul>li:last-child a:after{content:" "; display: block;
 	position: absolute; z-index: -1; top: 0; left: 0;
@@ -79,10 +82,6 @@ body{overflow-x: hidden;}
 
 #homeBox ul>li>a:hover{background-color: #acc;}
 #homeBox ul>li>a:focus{background-color: #afc;}
-
-
-
-
 
 /* ======================================== */
 #homeBox:before, #homeBox::before, 
@@ -92,13 +91,34 @@ body{overflow-x: hidden;}
 /* ======================================== */
 
 .box_wrap{width:100%; height:auto; min-height:40rem;}
-#headBox{float:left; position: relative; z-index: 100; width:15.625rem; height:auto; min-height:44.375rem; background-color:#777777;}
+
+
+/* #headBox ================================== */
+#headBox{float:left; position: relative; z-index: 100; 
+	padding:3.4375rem 3.125rem 6.25rem 2.5rem; box-sizing: border-box; 
+	width:15.625rem; height:auto; min-height:44.375rem; background-color:#777777;}
 
 #headBox:before, #headBox::before{content:" "; display: block; 
         position: absolute; z-index:-1; top: 0; left: 50%; margin-left:-50vw;
-				width: 50vw; height: 100%; background-color:inherit;}
+				width: 50vw; height: 100%; background-color:inherit;
+			  display: none; }
 
 
+h1 {margin-bottom:1.875rem; width: 100%; height: 105px; background-color:#acf;}
+
+#gnb {width: 100%; height: auto; min-height:10rem; background-color:#acf;}
+#gnb > ul {width: 100%; height: auto;}
+#gnb > ul > li {margin-bottom: 1rem;
+  
+ width: 100%; height: 2.8125rem;}
+
+#gnb > ul > li:last-child {margin-bottom: 0; height:7rem;}
+
+#gnb > ul > li > a {display: block; box-sizing:border-box; border-bottom:4px solid #fff; width: 100%; height: 100%;}
+
+#gnb > ul > li > a:focus{border-color:#000;}
+
+/* #viewBox ================================ */
 #viewBox{float:left; position: relative; z-index: 100; width:45.625rem; height:auto; min-height:44.375rem;  background-color:#adadad;}
 
 #viewBox:before, #viewBox::before{content:" "; display: block; 
