--- a/b_example/c_normal/css/src/gcass/layout.css
+++ b/b_example/c_normal/css/src/gcass/layout.css
@@ -130,10 +130,24 @@ h1 {margin-bottom:1.875rem; width: 100%; height: 105px; background-color:#acf;}
 
 /* #footBox ================================*/
 #footBox{position: relative; z-index: 100; 
+		padding:0.625rem 2.5rem 1.75rem; box-sizing: border-box;
 	  width: 100%; height:6.875rem; background-color:#ffff55;}
 
 #footBox:after,
 #footBox::after{content:" "; display: block; width: 100vw; height: 0;
 				position: absolute; z-index: 500; left: 50%; top: 0; margin-left: -50vw;
 				border-top:0.0625rem solid #171717;}
+
+#footBox h2 {float:left; margin-right:1.5625rem; width:4.5rem; height: 3rem; background-color:#acf;}
+
+.info_area {float:left; margin-right:1.5625rem; width:5.625rem; height:45px; background-color:#acf;}
+.location{border-bottom:1px solid #575757; box-sizing:border-box;
+         width: 100%; height: 20px;}
+
+.sns{width: 100%; height: 25px;}
+.sns li{float:left; padding:1px 2px 0; box-sizing:border-box; width: 33.333333%; height:24px; }
+.sns li>a{background-color:#fff;}
+
+.addr_area {float:left; width:7.5rem; height:2.8125rem; background-color:#acf;}
+.more_area {float:right;width:18.75rem; height:auto; background-color:#acf;}
 
