--- a/b_example/c_normal/css/src/gcass/layout.css
+++ b/b_example/c_normal/css/src/gcass/layout.css
@@ -67,7 +67,7 @@ body{overflow-x: hidden;}
 /* #home =================================== */
 #homeBox{position: relative; z-index: 100; width: 100%; height:1.875rem; background-color:#888888;}
 #homeBox ul{float: right; width: 28rem; height: 100%;}
-#homeBox ul>li{float:left; width: 95px; height: 100%;}
+#homeBox ul>li{float:left; width: 5.9375rem; height: 100%;}
 #homeBox ul>li:nth-child(2) {background-color:#555555;}
 #homeBox ul>li:last-child {position:relative; z-index:100; width:15.3125rem;background-color:#fff30d;}
 
@@ -104,7 +104,7 @@ body{overflow-x: hidden;}
 			  display: none; }
 
 
-h1 {margin-bottom:1.875rem; width: 100%; height: 105px; background-color:#acf;}
+h1 {margin-bottom:1.875rem; width: 100%; height: 6.5625rem; background-color:#acf;}
 
 #gnb {width: 100%; height: auto; min-height:10rem; background-color:#acf;}
 #gnb > ul {width: 100%; height: auto;}
@@ -114,7 +114,7 @@ h1 {margin-bottom:1.875rem; width: 100%; height: 105px; background-color:#acf;}
 
 #gnb > ul > li:last-child {margin-bottom: 0; height:7rem;}
 
-#gnb > ul > li > a {display: block; box-sizing:border-box; border-bottom:4px solid #fff; width: 100%; height: 100%;}
+#gnb > ul > li > a {display: block; box-sizing:border-box; border-bottom:0.25rem solid #fff; width: 100%; height: 100%;}
 
 #gnb > ul > li > a:focus{border-color:#000;}
 
@@ -125,7 +125,7 @@ h1 {margin-bottom:1.875rem; width: 100%; height: 105px; background-color:#acf;}
         position: absolute; z-index:-1; top: 0; right: 50%; margin-right:-50vw;
 				width: 50vw; height: 100%; background-color:inherit;}
 
-#viewBox .com {margin: auto; margin-top: 5rem; width: 340px; height: 550px; background-color:#acf;}
+#viewBox .com {margin: auto; margin-top: 5rem; width: 21.25rem; height: 34.375rem; background-color:#acf;}
 
 
 /* #footBox ================================*/
@@ -140,14 +140,38 @@ h1 {margin-bottom:1.875rem; width: 100%; height: 105px; background-color:#acf;}
 
 #footBox h2 {float:left; margin-right:1.5625rem; width:4.5rem; height: 3rem; background-color:#acf;}
 
-.info_area {float:left; margin-right:1.5625rem; width:5.625rem; height:45px; background-color:#acf;}
-.location{border-bottom:1px solid #575757; box-sizing:border-box;
-         width: 100%; height: 20px;}
+/* .info_area ------------------- */
+.info_area {float:left; margin-right:1.5625rem; width:5.625rem; height:2.8125rem; background-color:#acf;}
+.location{border-bottom:0.0625rem solid #575757; box-sizing:border-box;
+         width: 100%; height: 1.25rem;}
 
-.sns{width: 100%; height: 25px;}
-.sns li{float:left; padding:1px 2px 0; box-sizing:border-box; width: 33.333333%; height:24px; }
+.sns{width: 100%; height: 1.5625rem;}
+.sns li{float:left; padding:0.0625rem 0.125rem 0; box-sizing:border-box; width: 33.333333%; height:1.5rem; }
 .sns li>a{background-color:#fff;}
 
-.addr_area {float:left; width:7.5rem; height:2.8125rem; background-color:#acf;}
-.more_area {float:right;width:18.75rem; height:auto; background-color:#acf;}
+/* .addr_area ------------------- */
+.addr_area {float:left; width:22.5rem; height:auto; background-color:#acf;}
+.addr_area>p{font-size:0.9rem; letter-spacing:-0.025rem; color:#171717; }
+.addr_area>p>strong{font-size: 0;}
+.dash:before{content:"."; color:#575757; font-size:0.5rem;}
+
+/* .more_area ------------------- */
+.more_area {float:right; margin-top:-4.75rem;
+	   width:18.75rem; height:auto; background-color:#acf;}
+
+.more_area dl {width: 100%; height: auto;}
+.more_area dl>dt{float:left; 
+	/* padding-top:2rem; box-sizing: border-box; */
+	line-height:4.125rem;
+	width:5.9375rem; height: 4.125rem; background-color:#575757;
+	font-size:1rem; text-align: center; color:#fff; }
+
+.more_area dl>dd{float:left; padding: 1rem; box-sizing: border-box;
+	width:12.75rem; height: 4.125rem; background-color:#fff30d;
+			font-size: 1rem; /*text-indent:1rem;*/ line-height:4.125rem; color:#171717;}
+.more_area dl>dd>a{display: block; width: 100%; height: 100%; color:inherit;}
+
+
+.more_area p {width: 100%; height: auto; font-size:0.516667rem;}
+
 
